--- a/docker-compose-develop.yaml
+++ b/docker-compose-develop.yaml
@@ -136,6 +136,7 @@ services:
       - ./configs/microservice/mcp-service/configs:/app/configs/microservice/mcp-service/configs
       - ${WANWU_PROJECT_DIR}/mcp-service/log:/app/log
     environment:
+      SERVER_API_BASE_URL: ${WANWU_API_BASE_URL}
       DB_NAME: ${WANWU_DB_NAME}
       DB_MYSQL_ADDRESS: ${WANWU_MYSQL_ADDRESS}
       DB_MYSQL_PASSWORD: ${WANWU_MYSQL_PASSWORD}
