--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@antv/g6": "^5.0.50",
+    "@antv/g6": "^3.5.0",
     "@antv/x6": "^2.18.1",
     "@antv/x6-plugin-minimap": "^2.0.7",
     "@antv/x6-plugin-scroller": "^2.0.10",
@@ -33,6 +33,7 @@
     "markdown-it": "^14.1.0",
     "markdown-loader": "^8.0.0",
     "marked": "^4.0.13",
+    "ml-matrix": "^6.10.8",
     "moment": "^2.30.1",
     "monaco-editor": "^0.24.0",
     "monaco-editor-vue": "^1.0.10",
@@ -50,11 +51,18 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.28.5",
     "@vue/cli-plugin-router": "~4.5.13",
     "@vue/cli-plugin-vuex": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
+    "babel-loader": "^8.4.1",
     "child_process": "^1.0.2",
     "compression-webpack-plugin": "^1.1.12",
+    "core-js": "^3.37.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
