--- a/configs/microservice/bff-service/configs/config.yaml
+++ b/configs/microservice/bff-service/configs/config.yaml
@@ -86,6 +86,7 @@ default-icon:
   rag: "/v1/static/icon/rag-default-icon.png"
   agent: "/v1/static/icon/agent-default-icon.png"
   workflow: "/v1/static/icon/workflow-default-icon.png"
+  chatflow: "/v1/static/icon/chatflow-default-icon.png"
   mcpCustom: "/v1/static/icon/mcp-custom-default-icon.png"
   mcpServer: "/v1/static/icon/mcp-server-default-icon.png"
   tool: "/v1/static/icon/custom-tool-default-icon.png"
