--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@antv/g6": "^5.0.50",
+    "@antv/g6": "^4.8.0",
+    "@antv/layout": "^1.2.0",
     "@antv/x6": "^2.18.1",
     "@antv/x6-plugin-minimap": "^2.0.7",
     "@antv/x6-plugin-scroller": "^2.0.10",
