fix(callback): fix minio start err & try except

--- a/callback/configs/config.ini
+++ b/callback/configs/config.ini
@@ -8,3 +8,15 @@ PASSWORD=
 USER=
 ENDPOINT=
 SECURE=False
+BUCKET_NAME= callback
+
+[URL]
+MINIO_DOWNLOAD=
+RAG_DOC_PARSER=
+
+[DOC]
+CHUNK_SIZE = 8192
+OVERLAP_RATIO = 0
+
+[MODEL]
+MAX_INPUT_TOKENS =10000
