feat(callback): code review

--- a/docker-compose-develop.yaml
+++ b/docker-compose-develop.yaml
@@ -412,7 +412,7 @@ services:
       REDIS_PORT: ${WANWU_REDIS_PORT}
       REDIS_PASSWORD: ${WANWU_REDIS_PASSWORD}
       URL_RAG_DOC_PARSER: http://rag-wanwu:8681/rag/doc_parser
-      URL_MINIO_DOWNLOAD: ${WANWU_WEB_BASE_URL}/minio/download/api/
+      URL_MINIO_DOWNLOAD: ${WANWU_WEB_BASE_URL}/minio/download/api
 
   # agentscope:
   #   restart: always
