--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,css,md,json}": [
+    "*.{js,jsx,ts,tsx,css,json,vue}": [
       "npm run lint:fix"
     ]
   },
