feat(bff): delete conversation & record history

--- a/configs/microservice/bff-service/configs/config.yaml
+++ b/configs/microservice/bff-service/configs/config.yaml
@@ -267,6 +267,7 @@ workflow:
   get_draft_intelligence_info_uri: /api/intelligence_api/search/get_draft_intelligence_info
   get_project_conversation_def: /api/workflow_api/project_conversation/create_by_wanwu
   get_conversation_message_list_uri: /v1/conversation/message/list_by_wanwu
+  delete_conversation_uri: /api/workflow_api/project_conversation/delete
   # upload
   upload_action_uri: /api/common/upload/apply_upload_action
   upload_common_uri: /api/common/upload
