chore(wanwu): code review

--- a/configs/microservice/bff-service/configs/config.yaml
+++ b/configs/microservice/bff-service/configs/config.yaml
@@ -257,10 +257,10 @@ workflow:
   import_uri: /api/workflow_api/import
   convert_uri: /api/workflow_api/update_meta_by_wanwu
   # run
-  test_run_uri: /v1/workflow/%v/run_by_wanwu
-  test_run_web_uri: /v1/workflow/run_by_wanwu 
+  workflow_run_by_openapi_uri: /v1/workflow/%v/run_by_wanwu
+  workflow_run_latest_version_uri: /v1/workflow/run_by_wanwu
   get_process_uri: /api/workflow_api/get_process
-  chatflow_run_uri: /v1/workflow/chat_by_wanwu
+  chatflow_run_by_openapi_uri: /v1/workflow/chat_by_wanwu
   # conversation
   create_chatflow_conversation_uri: /v1/workflow/conversation/create_by_wanwu
   get_draft_intelligence_list_uri: /api/intelligence_api/search/get_draft_intelligence_list
@@ -275,10 +275,9 @@ workflow:
   sign_img_uri: /api/workflow_api/sign_image_url
   # version
   publish_uri: /api/workflow_api/publish
-  version_list_uri: /api/workflow_api/version_list           
-  update_version_desc_uri: /api/workflow_api/version_description  
-  rollback_uri: /api/workflow_api/rollback  
-  get_latest_canvas_uri: /api/workflow_api/canvas
+  version_list_uri: /api/workflow_api/version_list
+  update_version_desc_uri: /api/workflow_api/version_description
+  rollback_uri: /api/workflow_api/rollback
    
 
   model_params:
