--- a/web/package.json
+++ b/web/package.json
@@ -69,9 +69,9 @@
     "lint-staged": "^12.5.0",
     "markdown-loader": "^8.0.0",
     "monaco-editor-webpack-plugin": "^3.1.0",
-    "node-sass": "^4.14.1",
+    "sass": "~1.97.1",
     "prettier": "^3.6.2",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "~16.0.6",
     "svg-sprite-loader": "^6.0.11",
     "vue-loader": "^17.4.2",
     "vue-template-compiler": "^2.6.11"
