--- a/web/package.json
+++ b/web/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
+    "@kangc/v-md-editor": "^1.7.12",
     "@vue/cli-plugin-babel": "~5.0.9",
     "@vue/cli-plugin-router": "~5.0.9",
     "@vue/cli-plugin-vuex": "~5.0.9",
@@ -71,6 +72,7 @@
     "monaco-editor-webpack-plugin": "^3.1.0",
     "sass": "~1.97.1",
     "prettier": "^3.6.2",
+    "prismjs": "^1.30.0",
     "sass-loader": "~16.0.6",
     "svg-sprite-loader": "^6.0.11",
     "vue-loader": "^17.4.2",
